--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
-    padding-left: 0%;
-    margin: 0%;
+    padding: 0;
+    margin: 0;
     text-align:center;
     font-family: 'arial', sans-serif;
     position: relative;
@@ -9,7 +9,7 @@
   /*header*/
 header {
     width: 100%;
-    justify-content: space-around;
+    justify-content: center;
 }  
 .nav {
     top:0px; 
@@ -26,7 +26,8 @@ header {
     padding: 0;
 }
   nav a {
-    margin-left: 25px;
+    font-size: 20px;
+    margin-left: 100px;
 }
 .index {
     display: flex;
@@ -64,8 +65,8 @@ header {
     left: 1px;
 }
 .banner_img{
-    height: 337px;
-    width: 1276px;
+    height: 250px;
+    width: 100%;
 }
 
   /*Photo*/  
@@ -79,28 +80,29 @@ header {
     border: 1px solid #707070;
     opacity: 1;
 }
-.contato1 {
+
+.icon-git {
     position: absolute;
-    bottom: -150px;
-    left: calc(16% - 80px);
+    bottom: -170px;
+    left: 140px;
     height: 35px;
     border-radius: 100%;
     display: flex;
     cursor: pointer;
 }
-.contato2 {
+.icon-linkedin {
     position: absolute;
-    bottom: -155px;
-    left: calc(19% - 75px);
+    bottom: -175px;
+    left: 190px;
     height: 35px;
     border-radius: 100%;
     display: flex;
     cursor: pointer;
 }
-.contato3 {
+.icon-instagram {
     position: absolute;
-    bottom: -149px;
-    left: calc(23% - 80px);
+    bottom: -170px;
+    left: 240px;
     height: 35px;
     border-radius: 100%;
     display: flex;
@@ -110,12 +112,19 @@ header {
   /*description */
 .description h1 h2 p {
     display: inline-block;
-    padding-left: 46%;
-    padding-top: 0;
+    text-align: center;
     width: 70%;
     margin-bottom: -10%;
 }
+
+h1 {
+    display: block;
+    margin: auto;
+    text-align: center;
+}
 .name{
+
+    text-align: center;
     width: 422;
     height: 73px;
     font-size: 55px;
@@ -129,14 +138,14 @@ header {
     font-weight: 300;
 }
 .sobre_mim {
-    text-align: left;
+    text-align: center;
     font-size: 34px;
     color: #707070;
     font-weight: bold;
 }
 .descri {
-    text-align: left;
-    font-size: 18px;
+    text-align: center;
+    font-size: 20px;
     color: #525151;
     font-weight: 700;
 }
@@ -144,6 +153,7 @@ header {
   /*formacion*/
   
 .formacion {
+    text-align: center;
     background-color: #2E476B;
     opacity: 1;
     width: 100%;
@@ -156,44 +166,29 @@ header {
 }
   
 .titulo2 {
-    text-align: left;
+    text-align: center;
     font-size: 55px;
     color: #2c2929;
     font-weight: 300;
 }
 
 .titulo3 {
-    text-align: left;
+    text-align: center;
     font-size: 55px;
-    color: #404041;
+    color: #2c2929;
     font-weight: 300;
 }
 
 .title{
-    font-size: 21px;
+    font-size: 24px;
     font-weight: bold;
 }
 .uni{
-    font-size:13px;
+    font-size:17px;
     text-transform: uppercase;
     margin:2px;
 }
         
-  /*projects*/
-  
-.project {
-    background-color: #B9C8E6;
-}
-article {
-    width: 865px;
-    height: 353px;
-    opacity: 1;
-    display: flex;
-    justify-content:space-around;
-    align-content: center;
-    padding-left: 300px;
-    padding-top: 34px; 
-}
 button {
     width: 110px;
     height: 34px;
@@ -206,30 +201,37 @@ button {
     cursor: pointer;
 }
 
-/*Cards*/
-.cardp1{
-  height: 230px;
-  width: 210px;
-  background-color: #f7f4f2;
-  padding: 40px;
-  float: left;
-  margin: 0px;
+/*API*/
+.API {
+    background-color: #2E476B;
+    height: 20%;
+    text-decoration: none;
+    font-size: 19px;
+    font-weight: 700;
+    line-height: 1;
+    color: #bdaf96;
 }
-.cardp2{
-  height: 230px;
-  width: 210px;
-  background-color: #fcfaf8;
-  padding: 40px;
-  float: left;
-  margin: 0px;
+.card {
+  display:inline-block;
+  justify-content: center;
+  align-content: center;
+  background-color: #1af3f3;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 300px;
+  height: 80px;
+  margin: 8px auto;
+  transition: 0.45s;
+  border-radius: 5px;
+  opacity: 0.8;
 }
 
   /*footer*/
 .contato{
-    text-align: left;
+    text-align: center;
     font-size: 21px;
     color: #707070;
-    background-color:#FFFFFF;
+    background-color:#0F1C2E;
 }
 .titulo4 {
     font-size: 55px;
@@ -250,3 +252,57 @@ color: #fff;
 border-color: transparent;
 }
 
+/*PROJETO JS FORMULARIO E API*/
+
+footer {
+    background-color: #0F1C2E;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    color: #707070;
+}
+
+.formulario{
+    padding: 2rem;
+    border-radius: 10px;
+    min-width: 40%;
+    overflow: auto;
+}
+.contato-email{
+    margin-bottom: 1rem;
+    text-align: center;
+    color: #707070;
+}
+
+.formulario form{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.span-required{
+    display: none;
+}
+
+.inputs{
+    margin: auto;
+    display: block;
+    padding: 8px 5px;
+    outline: none;
+    background-color: #2E476B;
+    border-radius: 10px;
+    border:#ced3da;
+    color: #B9C8E6;
+    width: 50%;
+    box-sizing: border-box;
+    transition: 0.4s;
+}
+
+.inputs:focus{
+    border-color:#b0b961;
+}
+
+button{
+    margin: auto;
+    display: block;
+}
